@@ -6,6 +6,9 @@ module ActiveScaffold::Config
     def initialize(core_config)
       @core = core_config
       @action_group = self.class.action_group.clone if self.class.action_group
+
+      # start with the ActionLink defined globally
+      @link = self.class.link.clone if self.class.respond_to?(:link) && self.class.link
     end
     attr_reader :core
 
