@@ -6,9 +6,6 @@ module ActiveScaffold::Config
       super
       @text_search = self.class.text_search
       @human_conditions = self.class.human_conditions
-
-      # start with the ActionLink defined globally
-      @link = self.class.link.clone
     end
 
 
@@ -16,7 +13,7 @@ module ActiveScaffold::Config
     # --------------------------
     # the ActionLink for this action
     cattr_reader :link
-    @@link = ActiveScaffold::DataStructures::ActionLink.new('show_search', :label => :search, :type => :collection, :security_method => :search_authorized?, :ignore_method => :search_ignore?)
+    @@link = ActiveScaffold::DataStructures::ActionLink.new('show_search', :label => :search, :type => :collection, :security_method => :search_authorized?, :ignore_method => :field_search_ignore?)
 
     # A flag for how the search should do full-text searching in the database:
     # * :full: LIKE %?%
